# sensorpanel

./: .gitmodules  Cargo.toml  config.toml
hardware/rpi/: README.txt  cmdline.txt  config.txt
linux/: bootstrap.sh  sensorpanel.service
src/: common_widgets.rs  config.rs  context.rs  data.rs  event.rs  fonts.rs  linux_panel.rs  linux_widgets.rs  log.rs  main.rs  panel.rs  pending_panel.rs  screenctl.rs  state.rs  textures.rs  websocket.rs  widgets.rs  windows_panel.rs  windows_widgets.rs
