[package]
name = "sensorpanel"
version = "0.1.0"
authors = ["magnus@mindphaser.se"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.5"
rand = "0.8.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
tokio = { version = "1.7.1", features = ["full"] }
tungstenite = "0.13.0"