[package]
name = "sensorpanel"
version = "0.1.0"
authors = ["magnus@mindphaser.se"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
raylib = { git = "https://github.com/mangefoo/raylib-rs", branch = "v3.5-rpi" }
serde = {version = "1.0"}
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
tokio = { version = "1.7.1", features = ["full"] }
tungstenite = "0.13.0"
toml = "0.5.8"
clap = "3.0.0-beta.2"
